--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "kirtan-next",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
+    "dev": "next dev --webpack -p 3333",
     "build": "next build --webpack",
-    "start": "next start",
+    "start": "serve out -p 3334",
     "lint": "eslint"
   },
   "dependencies": {
+    "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "16.0.0",
+    "prettier": "^2.8.8",
+    "sass": "^1.93.2",
+    "serve": "^14.2.5",
+    "typescript": "^5"
   }
 }
