--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "next": "16.0.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "schema-dts": "^1.1.5"
   },
   "devDependencies": {
     "@types/node": "^20",
