--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.0",
+    "classnames": "^2.3.1",
+    "next": "^16.0.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-responsive-modal": "^7.1.0",
     "schema-dts": "^1.1.5"
   },
   "devDependencies": {
