--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^16.0.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-qr-code": "^2.0.18",
     "react-responsive-modal": "^7.1.0",
     "schema-dts": "^1.1.5"
   },
