--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.12",
     "classnames": "^2.3.1",
     "next": "^16.0.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-qr-code": "^2.0.18",
     "react-responsive-modal": "^7.1.0",
     "schema-dts": "^1.1.5"
