--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-qr-code": "^2.0.18",
     "react-responsive-modal": "^7.1.0",
-    "schema-dts": "^1.1.5"
+    "schema-dts": "^1.1.5",
+    "swipe-listener": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
