--- a/env/.env.dev
+++ b/env/.env.dev
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_ENV=development
+NEXT_PUBLIC_ORIGIN=https://dev.kirtan.site
 NEXT_PUBLIC_SEARCH_ACCOUNT_ID=f0691c438c8d24df4
 NEXT_PUBLIC_SEARCH_API_KEY=AIzaSyCt4jPTSY3LKh14RrS7SmQPfguyhQ_y2vU
-NEXT_PUBLIC_ENV=production
