--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:prod": "env-cmd -f env/.env.prod npm run build",
     "build:test": "env-cmd -f env/.env.dev npm run build",
     "start": "serve out -p 3334",
-    "lint": "eslint"
+    "lint": "eslint",
+    "install:src": "node scripts/processSrc.js",
+    "test:translations": "node scripts/validateTranslations.js"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -26,9 +28,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "ajv": "^8.17.1",
+    "chalk": "^4.1.2",
     "env-cmd": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "lodash.deburr": "^4.1.0",
     "prettier": "^2.8.8",
     "sass": "^1.93.2",
     "serve": "^14.2.5",
