--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "serve out -p 3334",
     "lint": "eslint",
     "install:src": "node scripts/processSrc.js",
-    "test:translations": "node scripts/validateTranslations.js",
+    "validation": "node scripts/validate.js",
     "type-check": "tsc --noEmit --pretty true"
   },
   "dependencies": {
