--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI
 
-on:
-  push:
-    branches: ["main"]
-  pull_request:
+# on:
+#   push:
+#     branches: ["main"]
+#   pull_request:
 
 jobs:
   build:
@@ -27,3 +27,5 @@ jobs:
 
       - name: Build
         run: npm run build:test
+
+
