--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^2.8.8",
     "sass": "^1.93.2",
     "serve": "^14.2.5",
+    "sync-request": "^6.1.0",
     "typescript": "^5"
   }
 }
