Nazar's feedback addressed

--- a/env/.env.prod
+++ b/env/.env.prod
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_ENV=production
 NEXT_PUBLIC_ORIGIN=https://kirtan.site/
-NEXT_PUBLIC_SEARCH_ACCOUNT_ID=f0691c438c8d24df4
-NEXT_PUBLIC_SEARCH_API_KEY=AIzaSyCt4jPTSY3LKh14RrS7SmQPfguyhQ_y2vU
+NEXT_PUBLIC_G_ID="G_ID"
+NEXT_PUBLIC_SEARCH_ACCOUNT_ID="SEARCH_ACCOUNT_ID"
+NEXT_PUBLIC_SEARCH_API_KEY="SEARCH_API_KEY"
