action: add envs

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -20,7 +20,13 @@ jobs:
               run: npm run install:src
 
             - name: Build 🔧
-              run: npm run build:test
+              env:
+                  NEXT_PUBLIC_ENV: ${{ vars.NEXT_PUBLIC_ENV }}
+                  NEXT_PUBLIC_ORIGIN: ${{ vars.NEXT_PUBLIC_ORIGIN }}
+                  NEXT_PUBLIC_G_ID: ${{ vars.NEXT_PUBLIC_G_ID }}
+                  NEXT_PUBLIC_SEARCH_ACCOUNT_ID: ${{ vars.NEXT_PUBLIC_SEARCH_ACCOUNT_ID }}
+                  NEXT_PUBLIC_SEARCH_API_KEY: ${{ vars.NEXT_PUBLIC_SEARCH_API_KEY }}
+              run: npm run build:action
 
             - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@v4
